--- a/notebooks/new.ipynb
+++ b/notebooks/new.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd2"
+    "import pandas as pd2\n",
+    "좆같다"
    ]
   }
  ],
